Added Pie Chart to result view

--- a/DDVP/DDVP/Base.lproj/Main.storyboard
+++ b/DDVP/DDVP/Base.lproj/Main.storyboard
@@ -732,7 +732,7 @@
         <!--Result-->
         <scene sceneID="M8o-rA-4SY">
             <objects>
-                <viewController id="cz1-y7-x8r" sceneMemberID="viewController">
+                <viewController id="cz1-y7-x8r" customClass="ResultVC" customModule="DDVP" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="NLq-bE-xmu"/>
                         <viewControllerLayoutGuide type="bottom" id="usV-zY-8zA"/>
@@ -741,53 +741,81 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Question text here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ymy-SM-oMv">
-                                <rect key="frame" x="218" y="72" width="141" height="146"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Question text here" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ymy-SM-oMv">
+                                <rect key="frame" x="16" y="72" width="343" height="146"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="146" id="mn8-ad-7XW"/>
+                                </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Votting time left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJ9-iw-Cij">
-                                <rect key="frame" x="218" y="626" width="141" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Voting time left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xJ9-iw-Cij">
+                                <rect key="frame" x="16" y="626" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Optn1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="La0-8n-0Cj">
-                                <rect key="frame" x="218" y="226" width="141" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optn1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="La0-8n-0Cj">
+                                <rect key="frame" x="16" y="226" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Optn2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72U-eY-bI6">
-                                <rect key="frame" x="218" y="255" width="141" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optn2" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="72U-eY-bI6">
+                                <rect key="frame" x="16" y="255" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Optn3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQQ-Js-5qN">
-                                <rect key="frame" x="218" y="284" width="141" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optn3" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="IQQ-Js-5qN">
+                                <rect key="frame" x="16" y="284" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Optn4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxg-lX-CmU">
-                                <rect key="frame" x="218" y="313" width="141" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Optn4" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wxg-lX-CmU">
+                                <rect key="frame" x="16" y="313" width="343" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="B7Y-d6-m65">
+                                <rect key="frame" x="67" y="342" width="240" height="240"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="72U-eY-bI6" firstAttribute="leading" secondItem="IQQ-Js-5qN" secondAttribute="leading" id="0h5-u7-5EM"/>
+                            <constraint firstItem="Ymy-SM-oMv" firstAttribute="trailing" secondItem="daS-h2-Ild" secondAttribute="trailingMargin" id="2Kd-sj-DfV"/>
+                            <constraint firstItem="IQQ-Js-5qN" firstAttribute="leading" secondItem="wxg-lX-CmU" secondAttribute="leading" id="62b-r2-mOT"/>
+                            <constraint firstItem="Ymy-SM-oMv" firstAttribute="leading" secondItem="daS-h2-Ild" secondAttribute="leadingMargin" id="6GX-GR-y5v"/>
+                            <constraint firstItem="B7Y-d6-m65" firstAttribute="leading" secondItem="daS-h2-Ild" secondAttribute="leadingMargin" constant="51" id="Bf7-2s-3bR"/>
+                            <constraint firstItem="La0-8n-0Cj" firstAttribute="leading" secondItem="72U-eY-bI6" secondAttribute="leading" id="Ebu-J9-Qm5"/>
+                            <constraint firstItem="Ymy-SM-oMv" firstAttribute="trailing" secondItem="La0-8n-0Cj" secondAttribute="trailing" id="F1a-A3-CCw"/>
+                            <constraint firstAttribute="bottom" secondItem="xJ9-iw-Cij" secondAttribute="bottom" constant="20" symbolic="YES" id="FkN-FK-MFa"/>
+                            <constraint firstItem="wxg-lX-CmU" firstAttribute="trailing" secondItem="xJ9-iw-Cij" secondAttribute="trailing" id="GQq-Hf-FKE"/>
+                            <constraint firstItem="wxg-lX-CmU" firstAttribute="top" secondItem="IQQ-Js-5qN" secondAttribute="bottom" constant="8" symbolic="YES" id="IuW-xj-FXU"/>
+                            <constraint firstItem="La0-8n-0Cj" firstAttribute="trailing" secondItem="72U-eY-bI6" secondAttribute="trailing" id="LBV-0h-jPa"/>
+                            <constraint firstItem="wxg-lX-CmU" firstAttribute="leading" secondItem="xJ9-iw-Cij" secondAttribute="leading" id="PAq-Ty-ISo"/>
+                            <constraint firstItem="B7Y-d6-m65" firstAttribute="top" secondItem="wxg-lX-CmU" secondAttribute="bottom" constant="8" symbolic="YES" id="QgD-HH-cue"/>
+                            <constraint firstItem="IQQ-Js-5qN" firstAttribute="trailing" secondItem="wxg-lX-CmU" secondAttribute="trailing" id="Vk1-Qh-nMv"/>
+                            <constraint firstItem="Ymy-SM-oMv" firstAttribute="top" secondItem="NLq-bE-xmu" secondAttribute="bottom" constant="8" symbolic="YES" id="dLV-F3-LLF"/>
+                            <constraint firstItem="B7Y-d6-m65" firstAttribute="centerX" secondItem="wxg-lX-CmU" secondAttribute="centerX" id="fRp-hH-oWa"/>
+                            <constraint firstItem="Ymy-SM-oMv" firstAttribute="leading" secondItem="La0-8n-0Cj" secondAttribute="leading" id="gbh-23-Lgi"/>
+                            <constraint firstItem="72U-eY-bI6" firstAttribute="top" secondItem="La0-8n-0Cj" secondAttribute="bottom" constant="8" symbolic="YES" id="iSL-43-znQ"/>
+                            <constraint firstItem="La0-8n-0Cj" firstAttribute="top" secondItem="Ymy-SM-oMv" secondAttribute="bottom" constant="8" symbolic="YES" id="oLX-be-YCf"/>
+                            <constraint firstItem="xJ9-iw-Cij" firstAttribute="top" secondItem="B7Y-d6-m65" secondAttribute="bottom" constant="44" id="y6B-yq-Q27"/>
+                            <constraint firstItem="72U-eY-bI6" firstAttribute="trailing" secondItem="IQQ-Js-5qN" secondAttribute="trailing" id="yWe-rg-lcV"/>
+                            <constraint firstItem="IQQ-Js-5qN" firstAttribute="top" secondItem="72U-eY-bI6" secondAttribute="bottom" constant="8" symbolic="YES" id="zDo-3J-QWd"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Result" id="5Gq-IG-5sE"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
+                    <connections>
+                        <outlet property="chartView" destination="B7Y-d6-m65" id="5SD-jH-rrB"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jsU-iI-6lW" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
